--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
         <article>
           <h3><strong>Hello, my name is Michael</strong></h3>
           <div>
-          <p>I am a web developer based out of La Conner, Washington, USA.</p>
-          <p>The languages I've learned are:
+            <p>I am a web developer based out of La Conner, Washington, USA.</p>
+            <p>The languages I've learned are:
             <ul class="points">
               <li>HTML+CSS</li>
               <li>Javascript</li>
+            </ul>
           </div>
         </article>
 
         <hr>
           <h3>About Me</h3>
         <div>
+          <section>
           <p>I currently am a student at Thinkful, completing their Engineering Flex program while working as a Data Coordinator for Randstad Sourceright. I enjoy learning new things in coding, reading, and my top 5 shows are:
             <ol class="points">
               <li>Breaking Bad</li>
@@ -48,16 +50,17 @@
               <li>Samurai Champloo</li>
             </ol>
           </p>
+          </section>
         </div>
 
         <hr>
         <h3>Contact Info</h3>
-        <div>
-          
-          <a href="https://github.com/MLondino">My Github</a>
+        <div>          
+          <a href="https://github.com/MLondino" target="_blank">My Github</a>
           <br>
-          <a href="https://www.linkedin.com/in/michael-londino-04b1b1139/">My Linkedin</a>
-    
+          <a href="https://www.linkedin.com/in/michael-londino-04b1b1139/" target="_blank">My Linkedin</a>
+        </div>
+
         <footer>
             <p>© Michael Londino</p>
         </footer>
