--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <hr>
         <h3>Contact Info</h3>
         <div>          
+          <!--next two links set to open in new tab rather than same window-->
           <a href="https://github.com/MLondino" target="_blank">My Github</a>
           <br>
           <a href="https://www.linkedin.com/in/michael-londino-04b1b1139/" target="_blank">My Linkedin</a>
