--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </article>
 
         <hr>
+        <section>
           <h3>About Me</h3>
         <div>
-          <section>
-          <p>I currently am a student at Thinkful, completing their Engineering Flex program while working as a Data Coordinator for Randstad Sourceright. I enjoy learning new things in coding, reading, and my top 5 shows are:
+          <p>I currently am a student at Thinkful, completing their Engineering Flex program while working as a Data Coordinator for Randstad Sourceright. I enjoy learning new things in coding, reading, and my top 5 shows are:</p>
             <ol class="points">
               <li>Breaking Bad</li>
               <li>Cowboy Bebop</li>
@@ -49,9 +49,8 @@
               <li>The Last Kingdom</li>
               <li>Samurai Champloo</li>
             </ol>
-          </p>
-          </section>
         </div>
+        </section>
 
         <hr>
         <h3>Contact Info</h3>
