--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section>
           <h3>About Me</h3>
         <div>
-          <p>I currently am a student at Thinkful, completing their Engineering Flex program while working as a Data Coordinator for Randstad Sourceright. I enjoy learning new things in coding, reading, and my top 5 shows are:</p>
+          <p>I currently am a student at Thinkful, completing their Engineering Flex program while working as a Data Coordinator for Randstad Sourceright. I'm excited to begin collaberating in teams. I enjoy learning new things in coding, reading, and my top 5 shows are:</p>
             <ol class="points">
               <li>Breaking Bad</li>
               <li>Cowboy Bebop</li>
